[project]
name = "comfyui_prnodes"
description = "Nodes:RandomPrompt, RandomPromptMixed, ImageScaleTo, EmptyLatentImageScaleBy, LoraLoaderExtended, Save Image w/Metadata, CheckpointLoaderSimpleExtended"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/pikenrover/ComfyUI_PRNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pikenrover"
DisplayName = "ComfyUI_PRNodes"
Icon = ""
